# Generated by Django 4.2.7 on 2025-03-28 19:48

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Empresa",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("codigo", models.CharField(max_length=10)),
                ("nombre", models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name="PlanMateriaPrima",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("plan", models.IntegerField()),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="UEBperdidas",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("cantidadUEB", models.IntegerField()),
                ("nombre", models.CharField(max_length=255)),
                ("municipio", models.CharField(max_length=255)),
                (
                    "empresa",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="TipoMateriaPrima",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("tipo", models.CharField(max_length=10)),
                ("cantidad", models.IntegerField()),
                (
                    "plan_materia_prima",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.planmateriaprima",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="PlanRecape",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("plan", models.IntegerField()),
                ("mes", models.IntegerField()),
                ("anno", models.IntegerField()),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="PlanDeMantenimiento",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("plan", models.IntegerField()),
                ("real", models.IntegerField()),
                ("porciento", models.IntegerField()),
                ("tipo", models.CharField(max_length=70)),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Inversiones",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("plan", models.IntegerField()),
                ("real", models.IntegerField()),
                ("porciento", models.IntegerField()),
                ("tipo", models.CharField(max_length=70)),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="inversiones",
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Interruptos",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("total", models.IntegerField()),
                ("equiposRotos", models.IntegerField()),
                ("faltaPiezas", models.IntegerField()),
                ("otrasCausas", models.IntegerField()),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Inmuebles",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("tipo", models.CharField(max_length=255)),
                ("cantidad", models.IntegerField()),
                (
                    "empresa",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="IndicadorGeneral",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("plan", models.IntegerField()),
                ("real", models.IntegerField()),
                ("porciento", models.IntegerField()),
                ("tipo", models.CharField(max_length=70)),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Delitos",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("denuncia", models.IntegerField()),
                ("municipio", models.CharField(max_length=50)),
                ("fecha", models.DateField()),
                ("unidad", models.CharField(max_length=50)),
                ("tipocidad", models.CharField(max_length=50)),
                ("productosSustraidos", models.CharField(max_length=255)),
                ("valorPerdidas", models.FloatField()),
                ("medidasTomadas", models.CharField(max_length=50)),
                (
                    "empresa",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Deficiencias",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("total", models.IntegerField()),
                ("resueltas", models.IntegerField()),
                ("pendientes", models.IntegerField()),
                (
                    "empresa",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="CuentasPagar",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("inicio_anno", models.FloatField()),
                ("mes_anterior", models.FloatField()),
                ("mes_actual", models.FloatField()),
                ("diferencia_incio_anno", models.FloatField()),
                ("diferencia_mes_anterior", models.FloatField()),
                ("saldo_al_inicio", models.FloatField()),
                ("mes_anterior_vencidas", models.FloatField()),
                ("mes_actual_vencidas", models.FloatField()),
                ("indice_gestion_cloro", models.FloatField()),
                ("ciclo_cobros_dias", models.FloatField()),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="CuentasCobrar",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("inicio_anno", models.FloatField()),
                ("mes_anterior", models.FloatField()),
                ("mes_actual", models.FloatField()),
                ("diferencia_incio_anno", models.FloatField()),
                ("diferencia_mes_anterior", models.FloatField()),
                ("saldo_al_inicio", models.FloatField()),
                ("mes_anterior_vencidas", models.FloatField()),
                ("mes_actual_vencidas", models.FloatField()),
                ("indice_gestion_cloro", models.FloatField()),
                ("ciclo_cobros_dias", models.FloatField()),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Cuadro",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("aprobada", models.IntegerField()),
                ("cubierta", models.IntegerField()),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="CargoSinCubrir",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("cargo", models.CharField(max_length=255)),
                (
                    "cuadro",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.cuadro",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="CapitalHumano",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("plantillaAprobada", models.IntegerField()),
                ("plantillaCubierta", models.IntegerField()),
                ("mujeres", models.IntegerField()),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="AtencionPoblacion",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("quejas", models.IntegerField()),
                ("peticiones", models.IntegerField()),
                ("termino", models.CharField(max_length=10)),
                (
                    "empresa",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                    ),
                ),
            ],
        ),
    ]
