# Generated by Django 4.2.7 on 2025-04-04 21:14

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    dependencies = [
        ("project", "0016_bancarizacion"),
    ]

    operations = [
        migrations.CreateModel(
            name="AtencionALaFamilia",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("fecha", models.DateField(verbose_name="Fecha")),
                (
                    "total_saf",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Total de SAF"
                    ),
                ),
                (
                    "beneficiados_conciliacion",
                    models.PositiveIntegerField(
                        default=0,
                        verbose_name="Beneficiados (según conciliación)",
                    ),
                ),
                (
                    "servicio_diario",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Servicio Diario"
                    ),
                ),
                (
                    "almuerzan_unidades",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Almuerzan Unidades"
                    ),
                ),
                (
                    "mensajeria",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Mensajería"
                    ),
                ),
                (
                    "llevan_en_cantina",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Llevan en cantina"
                    ),
                ),
                (
                    "total_beneficiarios",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Total Beneficiarios"
                    ),
                ),
                (
                    "empresa",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                        verbose_name="Empresa",
                    ),
                ),
            ],
            options={
                "verbose_name": "Atención a la Familia",
                "verbose_name_plural": "Atenciones a la familia",
                "unique_together": {("empresa", "fecha")},
            },
        ),
    ]
