# Generated by Django 4.2.7 on 2025-04-05 00:49

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    dependencies = [
        ("project", "0017_atencionalafamilia"),
    ]

    operations = [
        migrations.CreateModel(
            name="PerfeccionamientoComercioGastronomia",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "anno",
                    models.PositiveIntegerField(
                        default=0,
                        help_text="Año al que corresponden los datos",
                        verbose_name="Año",
                    ),
                ),
                (
                    "directores_filiales",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Directores E Filiales"
                    ),
                ),
                (
                    "avalados_mercancias",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Avalados V Mercancías"
                    ),
                ),
                (
                    "firma_codigo_conducta",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Firma del código de conducta"
                    ),
                ),
                (
                    "proceso_disponibilidad",
                    models.CharField(
                        default="N/P",
                        help_text="Especificar si cumple o no ('Cumplido', 'Incumplido', etc.)",
                        max_length=50,
                        verbose_name="Proceso de disponibilidad",
                    ),
                ),
                (
                    "mensajeros_vendedores_ambulantes",
                    models.PositiveIntegerField(
                        default=0,
                        verbose_name="Mensajeros y vendedores Ambulantes",
                    ),
                ),
                (
                    "creacion_emp_filiales",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Creación Emp. Filiales"
                    ),
                ),
                (
                    "ueb_dl_34",
                    models.CharField(
                        default="N/P",
                        help_text="Especificar si cumple o no ('Cumplido', 'Incumplido', etc.)",
                        max_length=50,
                        verbose_name="UEB DL-34",
                    ),
                ),
                (
                    "manual_identidad_visual",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Manual de Identidad Visual"
                    ),
                ),
                (
                    "categorizacion_almacenes",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Categorización de almacenes"
                    ),
                ),
                (
                    "licencias_sanitarias",
                    models.PositiveIntegerField(
                        default=0, verbose_name="Licencias Sanitarias"
                    ),
                ),
                (
                    "requisitos_calidad_bodegas",
                    models.TextField(
                        blank=True,
                        default="",
                        help_text="Detalles sobre el cumplimiento de los requisitos en bodegas",
                        null=True,
                        verbose_name="Requisitos de calidad en bodegas",
                    ),
                ),
                (
                    "estado",
                    models.CharField(
                        choices=[
                            ("Cumplido", "Cumplido"),
                            ("Incumplido", "Incumplido"),
                            ("Pendiente", "Pendiente"),
                            ("Con pérdida", "Con pérdida"),
                        ],
                        default="Pendiente",
                        max_length=50,
                        verbose_name="Estado",
                    ),
                ),
                (
                    "empresa",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                        verbose_name="Empresa",
                    ),
                ),
            ],
            options={
                "verbose_name": "Perfeccionamiento de Comercio y Gastronomía",
                "verbose_name_plural": "Perfeccionamientos de Comercio y Gastronomía",
                "unique_together": {("empresa", "anno")},
            },
        ),
    ]
