# Generated by Django 4.2.7 on 2025-04-06 00:31

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    dependencies = [
        ("project", "0026_alter_plandeconstruccion_donde_se_incumple"),
    ]

    operations = [
        migrations.CreateModel(
            name="IndicadorGeneralGM",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "nombre_indicador",
                    models.CharField(
                        max_length=255, verbose_name="Nombre del Indicador"
                    ),
                ),
                (
                    "unidad_medida",
                    models.CharField(
                        max_length=50, verbose_name="Unidad de Medida (UM)"
                    ),
                ),
                (
                    "plan_acumulado",
                    models.DecimalField(
                        decimal_places=2,
                        max_digits=15,
                        verbose_name="Plan Acumulado",
                    ),
                ),
                (
                    "real_acumulado",
                    models.DecimalField(
                        decimal_places=2,
                        max_digits=15,
                        verbose_name="Real Acumulado",
                    ),
                ),
                (
                    "porcentaje_cumplimiento",
                    models.DecimalField(
                        decimal_places=2,
                        max_digits=5,
                        verbose_name="Porcentaje (%)",
                    ),
                ),
                (
                    "empresa",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="project.empresa",
                        verbose_name="Empresa",
                    ),
                ),
            ],
            options={
                "verbose_name": "Indicador General del GM",
                "verbose_name_plural": "Indicadores Generales del GM",
            },
        ),
    ]
