@startuml
skinparam classAttributeIconSize 0

class Empresa {
    +codigo: String
    +nombre: String
}

class Cuadro {
    +aprobada: Integer
    +cubierta: Integer
    +empresa_id: Integer
}

class CargoSinCubrir {
    +cargo: String
    +cuadro_id: Integer
}

class AtencionPoblacion {
    +quejas: Integer
    +denuncias: Integer
    +peticiones: Integer
    +termino: String
    +empresa_id: Integer
}

class CapitalHumano {
    +plantillaAprobada: Integer
    +plantillaCubierta: Integer
    +mujeres: Integer
    +empresa_id: Integer
}

class Interruptos {
    +total: Integer
    +equiposRotos: Integer
    +faltaPiezas: Integer
    +otrasCausas: Integer
    +empresa_id: Integer
}

class Delitos {
    +no_denuncia: Integer
    +denuncia: Integer
    +municipio: String
    +fecha: Date
    +unidad: String
    +tipocidad: String
    +productosSustraidos: String
    +valorPerdidas: Float
    +medidasTomadas: String
    +empresa_id: Integer
}

class PlanRecape {
    +plan: Integer
    +mes: Integer
    +anno: Integer
    +empresa_id: Integer
}

class PlanMateriaPrima {
    +anno: Integer
    +papel_carton: Integer
    +chatarra_acero: Integer
    +envase_textil: Integer
    +chatarra_aluminio: Integer
    +chatarra_plomo: Integer
    +polietileno: Integer
    +empresa_id: Integer
}

class Inmuebles {
    +loc_oficina: Integer
    +cpl: Integer
    +almacenes: Integer
    +farmacias_opticas: Integer
    +taller: Integer
    +poncheras: Integer
    +plantas_fre: Integer
    +top: Integer
    +nave_pasaje: Integer
    +funeraria: Integer
    +floristeria: Integer
    +banos_p: Integer
    +tienda: Integer
    +base_carga: Integer
    +circulos_s: Integer
    +capillas: Integer
    +comedores: Integer
    +panaderias: Integer
    +dulcerias: Integer
    +pana_dulc: Integer
    +bodegas: Integer
    +minitalleres: Integer
    +fabricas: Integer
    +carnicerias: Integer
    +m_ideal: Integer
    +mais: Integer
    +tmc: Integer
    +bar: Integer
    +c_elaboracion: Integer
    +restaurant: Integer
    +cafeterias: Integer
    +c_nocturno: Integer
    +cabaret: Integer
    +merendero: Integer
    +heladerias: Integer
    +alojamiento: Integer
    +servicios: Integer
    +incinerador: Integer
    +empresa_id: Integer
}

class PlanDeMantenimiento {
    +anno: Integer
    +cantidad_de_obras_anual: Integer
    +importe_total_anual: Float
    +cantidad_de_obras_real: Integer
    +importe_total_real: Float
    +empresa_id: Integer
}

class Inversiones {
    +plan_obra: Integer
    +real_obra: Integer
    +porciento_obra: Float
    +plan_no_nominales: Integer
    +real_no_nominales: Integer
    +porciento_no_nominales: Float
    +plan_resto: Integer
    +real_resto: Integer
    +porciento_resto: Float
    +empresa_id: Integer
}

class IndicadorGeneral {
    +plan: Integer
    +real: Integer
    +porciento: Float
    +tipo: String
    +empresa_id: Integer
}

class Deficiencias {
    +total: Integer
    +resueltas: Integer
    +pendientes: Integer
    +empresa_id: Integer
}

class UEBperdidas {
    +cantidadUEB: Integer
    +nombre: String
    +municipio: String
    +empresa_id: Integer
}

class CuentasCobrar {
    +inicio_anno: Float
    +mes_anterior: Float
    +mes_actual: Float
    +diferencia_incio_anno: Float
    +diferencia_mes_anterior: Float
    +saldo_al_inicio: Float
    +mes_anterior_vencidas: Float
    +mes_actual_vencidas: Float
    +indice_gestion_cobro: Float
    +ciclo_cobros_dias: Float
    +por_cobrar_total: Float
    +vencidas_total: Float
    +porcentage_total: Float
    +por_cobrar_a_terceros: Float
    +vencidas_a_terceros: Float
    +porcentage_a_terceros: Float
    +por_cobrar_u_admin: Float
    +vencidas_u_admin: Float
    +porcentage_u_admin: Float
    +por_cobrar_grupo: Float
    +vencidas_grupo: Float
    +porcentage_grupo: Float
    +empresa_id: Integer
}

class CuentasPagar {
    +inicio_anno: Float
    +mes_anterior: Float
    +mes_actual: Float
    +diferencia_incio_anno: Float
    +diferencia_mes_anterior: Float
    +saldo_al_inicio: Float
    +mes_anterior_vencidas: Float
    +mes_actual_vencidas: Float
    +indice_gestion_pago: Float
    +ciclo_pagos_dias: Float
    +efectos_por_pagar: Float
    +empresa_id: Integer
}

class MaterialPlasticoReciclado {
    +no_material: Integer
    +materia: String
    +unidad_de_medida: String
    +plan: Integer
    +real: Integer
    +empresa_id: Integer
}

class MaterialDeConstruccion {
    +material: String
    +unidad_de_medida: String
    +plan: Integer
    +real: Integer
    +empresa_id: Integer
}

class SoberaniaAlimentaria {
    +unidad: String
    +huertos: Integer
    +canteros: Integer
    +tierras: Integer
    +empresa_id: Integer
}

class Bancarizacion {
    +establecimientos: Integer
    +total_unidades: Integer
    +solicitadas: Integer
    +aprobados_enzona: Integer
    +aprobados_transfermovil: Integer
    +operaciones_acumuladas: Integer
    +importe_acumulado: Float
    +empresa_id: Integer
}

class AtencionALaFamilia {
    +fecha: Date
    +total_saf: Integer
    +beneficiados_conciliacion: Integer
    +servicio_diario: Integer
    +almuerzan_unidades: Integer
    +mensajeria: Integer
    +llevan_en_cantina: Integer
    +total_beneficiarios: Integer
    +empresa_id: Integer
}

class PerfeccionamientoComercioGastronomia {
    +anno: Integer
    +directores_filiales: Integer
    +avalados_mercancias: Integer
    +firma_codigo_conducta: Integer
    +proceso_disponibilidad: String
    +mensajeros_vendedores_ambulantes: Integer
    +creacion_emp_filiales: Integer
    +ueb_dl_34: String
    +manual_identidad_visual: Integer
    +categorizacion_almacenes: Integer
    +licencias_sanitarias: Integer
    +requisitos_calidad_bodegas: String
    +estado: String
    +empresa_id: Integer
}

class Perdida {
    +plan: Integer
    +real: Integer
    +porciento: Float
    +indicador: String
    +empresa_id: Integer
}

class TransportacionDePasajeros {
    +aprobadas: Integer
    +real_ejecutadas: Integer
    +porciento: Float
    +indicador: String
    +empresa_id: Integer
}

class TransportacionDeCarga {
    +plan: Integer
    +real: Integer
    +porciento: Float
    +carga: String
    +empresa_id: Integer
}

class Medicamento {
    +plan: Integer
    +en_falta: Integer
    +porciento_de_afectacion: Float
    +medicamento: String
    +empresa_id: Integer
}

class InformacionGeneral {
    +total: Integer
    +cubiertos: Integer
    +desglosados_gobierno: Integer
    +desglosados_tercero: Integer
    +fluctuacion: Float
    +dato: String
    +empresa_id: Integer
}

class PlanDeConstruccion {
    +plan: Integer
    +real: Integer
    +donde_se_incumple: String
    +nombre: String
    +empresa_id: Integer
}

class IndicadorGeneralGM {
    +nombre_indicador: String
    +unidad_medida: String
    +plan_acumulado: Decimal
    +real_acumulado: Decimal
    +porcentaje_cumplimiento: Decimal
    +empresa_id: Integer
}

' Relaciones
Empresa "1" -- "*" Cuadro : empresa_id
Empresa "1" -- "*" AtencionPoblacion : empresa_id
Empresa "1" -- "*" CapitalHumano : empresa_id
Empresa "1" -- "*" Interruptos : empresa_id
Empresa "1" -- "*" Delitos : empresa_id
Empresa "1" -- "*" PlanRecape : empresa_id
Empresa "1" -- "*" PlanMateriaPrima : empresa_id
Empresa "1" -- "*" Inmuebles : empresa_id
Empresa "1" -- "*" PlanDeMantenimiento : empresa_id
Empresa "1" -- "*" Inversiones : empresa_id
Empresa "1" -- "*" IndicadorGeneral : empresa_id
Empresa "1" -- "*" Deficiencias : empresa_id
Empresa "1" -- "*" UEBperdidas : empresa_id
Empresa "1" -- "*" CuentasCobrar : empresa_id
Empresa "1" -- "*" CuentasPagar : empresa_id
Empresa "1" -- "*" MaterialPlasticoReciclado : empresa_id
Empresa "1" -- "*" MaterialDeConstruccion : empresa_id
Empresa "1" -- "*" SoberaniaAlimentaria : empresa_id
Empresa "1" -- "*" Bancarizacion : empresa_id
Empresa "1" -- "*" AtencionALaFamilia : empresa_id
Empresa "1" -- "*" PerfeccionamientoComercioGastronomia : empresa_id
Empresa "1" -- "*" Perdida : empresa_id
Empresa "1" -- "*" TransportacionDePasajeros : empresa_id
Empresa "1" -- "*" TransportacionDeCarga : empresa_id
Empresa "1" -- "*" Medicamento : empresa_id
Empresa "1" -- "*" InformacionGeneral : empresa_id
Empresa "1" -- "*" PlanDeConstruccion : empresa_id
Empresa "1" -- "*" IndicadorGeneralGM : empresa_id

Cuadro "1" -- "*" CargoSinCubrir : cuadro_id
@enduml